-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 19, 20
-
Component/s: hotspot
-
b19
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8321177 | 17.0.11 | Dmitry Chuyko | P3 | Resolved | Fixed | b01 |
jdk/jfr/event/runtime/TestActiveSettingEvent.java
Here's a snippet from the log file:
#section:main
----------messages:(5/295)----------
command: main jdk.jfr.event.runtime.TestActiveSettingEvent
reason: User specified action: run main/othervm jdk.jfr.event.runtime.TestActiveSettingEvent
Mode: othervm [/othervm specified]
Additional options from @modules: --add-modules jdk.jfr,java.management
elapsed time (seconds): 1.436
----------configuration:(3/54)----------
Boot Layer
add modules: jdk.jfr java.management
----------System.out:(2/62)----------
Testing configuration default
Testing configuration profile
----------System.err:(12/1000)----------
java.lang.Exception: Expected two batches of Active Setting events, at Recording.start() and during Recording.setSetting(...)
at jdk.jfr.event.runtime.TestActiveSettingEvent.testChangedSetting(TestActiveSettingEvent.java:213)
at jdk.jfr.event.runtime.TestActiveSettingEvent.main(TestActiveSettingEvent.java:69)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:578)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:1596)
JavaTest Message: Test threw exception: java.lang.Exception: Expected two batches of Active Setting events, at Recording.start() and during Recording.setSetting(...)
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.Exception: Expected two batches of Active Setting events, at Recording.start() and during Recording.setSetting(...)
----------rerun:(41/5363)*----------
- backported by
-
JDK-8321177 jdk/jfr/event/runtime/TestActiveSettingEvent.java failed with "Expected two batches of Active Setting events"
-
- Resolved
-
- duplicates
-
JDK-8288663 JFR: Disabling the JfrThreadSampler commits only a partially disabled state
-
- Resolved
-
- relates to
-
JDK-8347017 Test jdk/jfr/event/runtime/TestActiveSettingEvent.java failed with "Expected two batches of Active Setting events"
-
- Closed
-
-
JDK-8295274 HelidonAppTest.java fails "assert(event->should_commit()) failed: invariant" from compiled frame"
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/e4cb6aa3
-
Commit
openjdk/jdk/4df4a1f8
-
Review
openjdk/jdk17u-dev/2002
-
Review
openjdk/jdk/10575