8287832: jdk/jfr/event/runtime/TestActiveSettingEvent.java failed with "Expected two batches of Active Setting events"

Reviewed-by: phh
Backport-of: 4df4a1f8e238ebf49d4b0e1e102ccdc3cdb82de9